# panther-minor-controller

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  API.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  WOL.md  lefthook.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  renovate.json
.agents/skills/release/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
scripts/: install-app.sh  setup-device.sh  update-app.sh
src/: error.rs  gpio.rs  html.rs  main.rs
