[package]
name = "panther-minor-controller"
version = "0.0.0"
edition = "2024"
description = "Remote controller for Panther Minor AI workstation"
license = "MIT"

[dependencies]
hyper = { version = "1.9.0", features = ["full"] }
http-body = "1.0.1"
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
tokio = { version = "1.52.1", features = ["full"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
async-trait = "0.1.89"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22.1", features = ["hal"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
